--- a/Exercicio2/app/src/main/res/values/colors.xml
+++ b/Exercicio2/app/src/main/res/values/colors.xml
@@ -7,4 +7,8 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="primeiro_cor">#00600F</color>
+    <color name="segunda_cor">#388E3C</color>
+    <color name="laranja">#FFFF5722</color>
+
 </resources>
