--- a/Exercicio1/app/src/main/res/layout/activity_detalhe.xml
+++ b/Exercicio1/app/src/main/res/layout/activity_detalhe.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".detalhe.Detalhe">
+    tools:context=".ui.detail.view.DetalheActivity">
 
     <TextView
         android:id="@+id/descricaoNomePersonagem"
