--- a/Exercicio1/app/src/main/res/layout/activity_marvel_lista.xml
+++ b/Exercicio1/app/src/main/res/layout/activity_marvel_lista.xml
@@ -6,12 +6,14 @@
     android:layout_height="match_parent"
     tools:context=".ui.marvelliist.view.MarvelListaActivity">
 
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvMarvelList"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
